display Elasticsearch version for admin dashboard 	modified:   app/controllers/admin/dashboard_controller.rb 	modified:   app/views/admin/dashboard/index.html.haml

--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -88,7 +88,9 @@
         %li
           Redis
           %span.pull-right= @redis_version
-
+        %li
+          Elasticsearch
+          %span.pull-right= @search_version
   .dashboard__widgets__space
     %div
       %h4= t 'admin.dashboard.space'
