--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -88,9 +88,10 @@
         %li
           Redis
           %span.pull-right= @redis_version
-        %li
-          Elasticsearch
-          %span.pull-right= @search_version
+        - if @search_enabled == true
+          %li
+            Elasticsearch
+            %span.pull-right= @search_version
   .dashboard__widgets__space
     %div
       %h4= t 'admin.dashboard.space'
