Compatible with nyaize
	modified:   app/controllers/api/v1/accounts/credentials_controller.rb
	modified:   app/controllers/settings/profiles_controller.rb
	modified:   app/lib/activitypub/adapter.rb
	modified:   app/lib/formatter.rb
	modified:   app/models/account.rb
	modified:   app/models/status.rb
	modified:   app/serializers/activitypub/actor_serializer.rb
	modified:   app/serializers/rest/account_serializer.rb
	modified:   app/serializers/rest/status_serializer.rb
	modified:   app/services/activitypub/process_account_service.rb
	modified:   app/views/admin/reports/_status.html.haml
	modified:   app/views/notification_mailer/_status.html.haml
	modified:   app/views/settings/profiles/show.html.haml
	modified:   app/views/statuses/_detailed_status.html.haml
	modified:   app/views/statuses/_simple_status.html.haml
	modified:   config/locales/simple_form.en.yml
	modified:   config/locales/simple_form.ja.yml
	new file:   db/migrate/20201127193255_add_cat_to_accounts.rb
	modified:   db/schema.rb

--- a/app/views/settings/profiles/show.html.haml
+++ b/app/views/settings/profiles/show.html.haml
@@ -33,6 +33,9 @@
     .fields-group
       = f.input :discoverable, as: :boolean, wrapper: :with_label, hint: t('simple_form.hints.defaults.discoverable'), recommended: true
 
+  .fields-group
+    = f.input :cat, as: :boolean, wrapper: :with_label, hint: t('simple_form.hints.defaults.cat')
+
   %hr.spacer/
 
   .fields-row
