--- a/app/views/notification_mailer/_status.html.haml
+++ b/app/views/notification_mailer/_status.html.haml
@@ -31,7 +31,7 @@
                                     = Formatter.instance.format_spoiler(status)
 
                               %div{ dir: rtl_status?(status) ? 'rtl' : 'ltr' }
-                                = Formatter.instance.format(status)
+                                = Formatter.instance.format(status, nyaize: status.account.cat)
 
                                 - if status.media_attachments.size > 0
                                   %p
