--- a/app/views/statuses/_quote_status.html.haml
+++ b/app/views/statuses/_quote_status.html.haml
@@ -1,22 +1,23 @@
 .status.quote-status{ dataurl:  ActivityPub::TagManager.instance.url_for(status) }
-  = link_to ActivityPub::TagManager.instance.url_for(status.account), class: 'status__display-name u-url', target: stream_link_target, rel: 'noopener' do
-    .status__avatar
-      %div
-        = image_tag status.account.avatar_static_url, width: 18, height: 18, alt: '', class: 'u-photo account__avatar'
-    %span.display-name
-      %bdi
-        %strong.display-name__html.p-name.emojify= display_name(status.account, custom_emojify: true)
-      &nbsp;
-      %span.display-name__account
-        = acct(status.account)
-        = fa_icon('lock') if status.account.locked?
+  .p-author.h-card
+    = link_to ActivityPub::TagManager.instance.url_for(status.account), class: 'status__display-name u-url', target: stream_link_target, rel: 'noopener' do
+      .status__avatar
+        %div
+          = image_tag status.account.avatar_static_url, width: 18, height: 18, alt: '', class: 'u-photo account__avatar'
+      %span.display-name
+        %bdi
+          %strong.display-name__html.p-name.emojify= display_name(status.account, custom_emojify: true)
+        = ' '
+        %span.display-name__account
+          = acct(status.account)
+          = fa_icon('lock') if status.account.locked?
 
-  .status__content.emojify<
+  .status__content.emojify{ lang: status.language, style: "display: #{!current_account&.user&.setting_expand_spoilers && status.spoiler_text? ? 'none' : 'block'}; " }<
     - if status.spoiler_text?
       %p{ :style => ('margin-bottom: 0' unless current_account&.user&.setting_expand_spoilers) }<
         %span.p-summary> #{Formatter.instance.format_spoiler(status)}&nbsp;
         %button.status__content__spoiler-link= t('statuses.show_more')
-    .e-content{ lang: status.language, style: "display: #{!current_account&.user&.setting_expand_spoilers && status.spoiler_text? ? 'none' : 'block'}; }" }
+    .e-content
       = Formatter.instance.format_in_quote(status, custom_emojify: true)
   
   - if !status.media_attachments.empty?
